# sibdev-practice-2021-project-python

./: README.md  docker-compose.prod.yml  docker-compose.yml  fabfile.py
docs/: swagger.json  swagger.yaml
nginx/: Dockerfile  nginx.conf
server/: .isort.cfg  Dockerfile  Dockerfile.prod  pyproject.toml  setup.cfg
server/apps/budget/: apps.py  factories.py  filters.py  paginators.py  permissions.py  querysets.py
server/apps/budget/admin/: __init__.py  category.py  transaction.py  widget.py
server/apps/budget/models/budget/: category.py  transaction.py  widget.py
server/apps/budget/serializers/: __init__.py  category.py  globals.py  summary.py  transaction.py  widget.py
server/apps/budget/tests/: common.py  tests_category_api.py  tests_globals_api.py  tests_serializers.py  tests_summary_api.py  tests_transaction_api.py  tests_widget_api.py
server/apps/budget/viewsets/: __init__.py  category.py  transaction.py  widget.py
server/apps/users/: admin.py  factories.py  managers.py  models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
server/config/: api_urls.py  urls.py  yasg.py
server/config/migrations/budget/: 0001_initial.py  0002_alter_category_unique_together.py  0003_widget.py
server/config/migrations/users/: 0001_initial.py
server/config/settings/: __init__.py  installed_apps.py  locale.py  settings.py
swagger/: Dockerfile
